--- a/src/Dapr.Jobs/Dapr.Jobs.csproj
+++ b/src/Dapr.Jobs/Dapr.Jobs.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-      <TargetFrameworks>net6;net7;net8</TargetFrameworks>
+      <TargetFrameworks>net6;net8</TargetFrameworks>
       <ImplicitUsings>enable</ImplicitUsings>
       <Nullable>enable</Nullable>
       <PackageId>Dapr.Jobs</PackageId>
@@ -12,8 +12,9 @@
   </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.*"/>
-        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.*"/>
+        <PackageReference Include="Grpc.Net.Client" Version="2.52.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.*" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.*" />
     </ItemGroup>
 
   <ItemGroup>
