--- a/src/Dapr.Jobs/Dapr.Jobs.csproj
+++ b/src/Dapr.Jobs/Dapr.Jobs.csproj
@@ -12,13 +12,23 @@
   </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Google.Protobuf" Version="3.15.0" />
         <PackageReference Include="Grpc.Net.Client" Version="2.52.0" />
+        <PackageReference Include="Grpc.Tools" Version="2.47.0" PrivateAssets="All" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.*" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.*" />
     </ItemGroup>
 
-  <ItemGroup>
-    <Compile Include="..\Shared\DaprDefaults.cs" Link="DaprDefaults.cs" />
-  </ItemGroup>
+    <ItemGroup>
+        <Protobuf Include="Protos\dapr\proto\scheduler\v1\scheduler.proto" ProtoRoot="Protos" GrpcServices="Client" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Include="..\Shared\DaprDefaults.cs" Link="DaprDefaults.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Dapr.Common\Dapr.Common.csproj" />
+    </ItemGroup>
 
 </Project>
