--- a/src/Dapr.Jobs/Dapr.Jobs.csproj
+++ b/src/Dapr.Jobs/Dapr.Jobs.csproj
@@ -20,15 +20,17 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Protobuf Include="Protos\dapr\proto\scheduler\v1\scheduler.proto" ProtoRoot="Protos" GrpcServices="Client" />
-    </ItemGroup>
-
-    <ItemGroup>
       <Compile Include="..\Shared\DaprDefaults.cs" Link="DaprDefaults.cs" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Dapr.Common\Dapr.Common.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Protobuf Include="Protos\dapr\proto\runtime\v1\dapr.proto" ProtoRoot="Protos" GrpcServices="Client" />
+        <Protobuf Include="Protos\dapr\proto\runtime\v1\appcallback.proto" ProtoRoot="Protos" GrpcServices="Server" />
+        <Protobuf Include="Protos\dapr\proto\common\v1\common.proto" ProtoRoot="Protos" GrpcServices="Client,Server" />
     </ItemGroup>
 
 </Project>
