--- a/examples/Client/PublishSubscribe/StreamingSubscribeExample/StreamingSubscribeExample.csproj
+++ b/examples/Client/PublishSubscribe/StreamingSubscribeExample/StreamingSubscribeExample.csproj
@@ -11,4 +11,9 @@
       <ProjectReference Include="..\..\..\..\src\Dapr.Messaging\Dapr.Messaging.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
