--- a/examples/Actor/DemoActor.UnitTest/DemoActor.UnitTest.csproj
+++ b/examples/Actor/DemoActor.UnitTest/DemoActor.UnitTest.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFrameworks>net6;net7;net8</TargetFrameworks>
+        <!--<TargetFramework>net6.0</TargetFramework>-->
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
