Added test logger in DemoActor.UnitTest
Signed-off-by: Manuel Menegazzo <manuel.menegazzo@outlook.com>

--- a/examples/Actor/DemoActor.UnitTest/DemoActor.UnitTest.csproj
+++ b/examples/Actor/DemoActor.UnitTest/DemoActor.UnitTest.csproj
@@ -2,14 +2,11 @@
 
     <PropertyGroup>
         <TargetFrameworks>net6;net7;net8</TargetFrameworks>
-        <!--<TargetFramework>net6.0</TargetFramework>-->
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
-
-        <PreserveCompilationContext>true</PreserveCompilationContext>
     </PropertyGroup>
 
     <ItemGroup>
@@ -21,6 +18,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="GitHubActionsTestLogger" Version="1.1.2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
         <PackageReference Include="Moq" Version="4.20.70" />
         <PackageReference Include="xunit" Version="2.4.2" />
