--- a/src/Dapr.Common/Dapr.Common.csproj
+++ b/src/Dapr.Common/Dapr.Common.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
         <PackageReference Include="Grpc.Net.Client" Version="2.52.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.*" />
     </ItemGroup>
 
 </Project>
