Restored missing using
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/src/Dapr.Messaging/Dapr.Messaging.csproj
+++ b/src/Dapr.Messaging/Dapr.Messaging.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <TargetFrameworks>net6;net8</TargetFrameworks>
         <Description>This package contains the reference assemblies for developing messaging services using Dapr.</Description>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
