Updated to use the standard Dapr client builder, added DI registration extension methods.
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/src/Dapr.Messaging/Dapr.Messaging.csproj
+++ b/src/Dapr.Messaging/Dapr.Messaging.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net6;net8</TargetFrameworks>
         <Description>This package contains the reference assemblies for developing messaging services using Dapr.</Description>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -16,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Dapr.Common\Dapr.Common.csproj" />
       <ProjectReference Include="..\Dapr.Protos\Dapr.Protos.csproj" />
     </ItemGroup>
 </Project>
