--- a/test/Dapr.Common.Test/Dapr.Common.Test.csproj
+++ b/test/Dapr.Common.Test/Dapr.Common.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
         <PackageReference Include="coverlet.msbuild" Version="6.0.2">
