Updates to implementation to reflect latest protos
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/test/Dapr.Messaging.Test/Dapr.Messaging.Test.csproj
+++ b/test/Dapr.Messaging.Test/Dapr.Messaging.Test.csproj
@@ -33,4 +33,8 @@
         <Using Include="Xunit" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="PublishSubscribe\Extensions\" />
+    </ItemGroup>
+
 </Project>
