--- a/test/Dapr.Jobs.Test/Dapr.Jobs.Test.csproj
+++ b/test/Dapr.Jobs.Test/Dapr.Jobs.Test.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <ItemGroup>
         <PackageReference Include="coverlet.msbuild" Version="6.0.2">
@@ -13,10 +13,24 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.AspNetCore.TestHost">
+            <Version>6.0.33</Version>
+        </PackageReference>
     </ItemGroup>
+
+    <!--<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+        <PackageReference Include="Microsoft.AspNetCore.TestHost">
+            <Version>6.0.33</Version>
+        </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+        <PackageReference Include="Microsoft.AspNetCore.TestHost">
+            <Version>8.0.8</Version>
+        </PackageReference>
+    </ItemGroup>-->
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\Dapr.Jobs\Dapr.Jobs.csproj" />
     </ItemGroup>
-
 </Project>
