--- a/src/Dapr.Workflow/Dapr.Workflow.csproj
+++ b/src/Dapr.Workflow/Dapr.Workflow.csproj
@@ -18,11 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\Shared\DaprDefaults.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Dapr.Client\Dapr.Client.csproj" />
+    <ProjectReference Include="..\Dapr.Common\Dapr.Common.csproj" />
     <ProjectReference Include="..\Dapr.AspNetCore\Dapr.AspNetCore.csproj" />
   </ItemGroup>
 
