--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,7 +6,7 @@
 
     <ItemGroup>
         <PackageVersion Include="coverlet.msbuild" Version="6.0.2"/>
-        <PackageVersion Include="FluentAssertions" Version="6.12.1" />
+        <PackageVersion Include="FluentAssertions" Version="5.9.0" />
         <PackageVersion Include="GitHubActionsTestLogger" Version="1.1.2" />
         <PackageVersion Include="Google.Api.CommonProtos" Version="2.2.0" />
         <PackageVersion Include="Google.Protobuf" Version="3.21.12" />
@@ -30,11 +30,15 @@
         <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
         <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="1.1.1" />
         <PackageVersion Include="MinVer" Version="2.3.0"/>
-        <PackageVersion Include="Moq" Version="4.20.70" />
+        <PackageVersion Include="Moq" Version="4.20.72" />
         <PackageVersion Include="Newtonsoft.Json" Version="13.0.3"/>
-        <PackageVersion Include="protobuf-net.Grpc.AspNetCore" Version="1.0.123" />
+        <PackageVersion Include="protobuf-net.Grpc.AspNetCore" Version="1.2.2" />
+        <PackageVersion Include="Serilog" Version="3.0.1" />
+        <PackageVersion Include="Serilog.AspNetCore" Version="7.0.0" />
+        <PackageVersion Include="Serilog.Sinks.Console" Version="4.1.0" />
+        <PackageVersion Include="Serilog.Sinks.File" Version="5.0.0" />
         <PackageVersion Include="System.Text.Json" Version="6.0.10"/>
-        <PackageVersion Include="xunit" Version="2.8.1" />
-        <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.1"/>
+        <PackageVersion Include="xunit" Version="2.9.2" />
+        <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2"/>
     </ItemGroup>
 </Project>
