--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageVersion Include="coverlet.collector" Version="6.0.2" />
         <PackageVersion Include="coverlet.msbuild" Version="6.0.2"/>
         <PackageVersion Include="FluentAssertions" Version="5.9.0" />
         <PackageVersion Include="GitHubActionsTestLogger" Version="1.1.2" />
@@ -20,7 +21,7 @@
         <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4"  />
         <PackageVersion Include="Microsoft.CodeAnalysis.Common" Version="4.8.0" />
         <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
-        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing.XUnit" Version="1.1.1" />
+        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing.XUnit" Version="1.1.2" />
         <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.8.0" />
         <PackageVersion Include="Microsoft.DurableTask.Client.Grpc" Version="1.3.0" />
         <PackageVersion Include="Microsoft.DurableTask.Worker.Grpc" Version="1.3.0" />
