--- a/test/Dapr.Client.Test/Dapr.Client.Test.csproj
+++ b/test/Dapr.Client.Test/Dapr.Client.Test.csproj
@@ -33,6 +33,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Dapr.Client\Dapr.Client.csproj" />
+    <ProjectReference Include="..\..\src\Dapr.Protos\Dapr.Protos.csproj" />
     <ProjectReference Include="..\..\src\Dapr.Common\Dapr.Common.csproj" />
   </ItemGroup>
 
