Building out unit tests, made some perf changes.
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/src/Dapr.Common/Dapr.Common.csproj
+++ b/src/Dapr.Common/Dapr.Common.csproj
@@ -13,4 +13,8 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Dapr.Common.Data.SourceGenerators\Dapr.Common.Data.SourceGenerators\Dapr.Common.Data.SourceGenerators.csproj" />
+    </ItemGroup>
+
 </Project>
