Using lowercase protos dir name
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/test/Dapr.Messaging.Test/Dapr.Messaging.Test.csproj
+++ b/test/Dapr.Messaging.Test/Dapr.Messaging.Test.csproj
@@ -32,6 +32,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Protobuf Include="protos\test.proto" ProtoRoot="protos" GrpcServices="Client" />
+    </ItemGroup>
+
+    <ItemGroup>
       <ProjectReference Include="..\..\src\Dapr.Messaging\Dapr.Messaging.csproj" />
     </ItemGroup>
 
