Reverted some .NET 8 requirement
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -114,9 +114,7 @@ jobs:
         uses: actions/setup-dotnet@v1
         if: ${{ matrix.install-version != '8.0.x' }}
         with:
-          dotnet-version: |
-            8.0.x
-            9.0.x
+          dotnet-version: 8.0.x
       - name: Build
         # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
         run: dotnet build --configuration release /p:GITHUB_ACTIONS=false
