Bug/476 multiple methods per interface with JSON serialization doesn´t work (#1343)
* update devcontainer

Signed-off-by: paule96 <paul-jeschke@outlook.com>

* update test setup

Signed-off-by: paule96 <paul-jeschke@outlook.com>

* Now the json serialization should work with multiple methods in an interface

Signed-off-by: paule96 <paul-jeschke@outlook.com>

* fixed devcontainer to run actors

Now the devcontainer uses docker in docker, so you can reach the dapr setup after you did run dapr init. This will then only affect the dev container, without compromising the host of the devcontainer

Signed-off-by: paule96 <paul-jeschke@outlook.com>

* fix bugs with the current implementation

Signed-off-by: paule96 <paul-jeschke@outlook.com>

* add a test that checks excatly the behavior

Signed-off-by: paule96 <paul-jeschke@outlook.com>

* fix devcontainer post creatd command

Signed-off-by: paule96 <paul-jeschke@outlook.com>

* change the default to dotnet 8.0

Signed-off-by: paule96 <paul-jeschke@outlook.com>

* I don't know what is different but we commit.

Maybe it resolves the need of chmod for it 🤷‍♀️

Signed-off-by: paule96 <paul-jeschke@outlook.com>

* make it easier to see why the application of an E2E test couldn't start

Signed-off-by: paule96 <paul-jeschke@outlook.com>

* make the exception in E2E more percise

Signed-off-by: paule96 <paul-jeschke@outlook.com>

* fix exception message

Signed-off-by: paule96 <paul-jeschke@outlook.com>

---------

Signed-off-by: paule96 <paul-jeschke@outlook.com>
Co-authored-by: Yaron Schneider <schneider.yaron@live.com>
Co-authored-by: Whit Waldo <whit.waldo@innovian.net>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,11 +10,15 @@
 		"ghcr.io/devcontainers/features/azure-cli:1": {
 			"version": "2.38"
 		},
-		"ghcr.io/devcontainers/features/docker-from-docker:1": {
-			"version": "20.10"
+		"ghcr.io/devcontainers/features/docker-in-docker": {
+			"version": "latest"
 		},
-		"ghcr.io/devcontainers/features/dotnet:1": {
-			"version": "6.0"
+		"ghcr.io/devcontainers/features/dotnet": {
+			"version": "8.0",
+			"additionalVersions": [
+				"6.0",
+				"7.0"
+			]
 		},
 		"ghcr.io/devcontainers/features/github-cli:1": {
 			"version": "2"
@@ -32,7 +36,8 @@
 		"ms-dotnettools.csharp",
 		"ms-dotnettools.vscode-dotnet-runtime",
 		"ms-azuretools.vscode-dapr",
-		"GitHub.copilot"
+		"GitHub.copilot",
+		"ms-dotnettools.csdevkit"
 	],
 	"forwardPorts": [
 		3000,
@@ -42,10 +47,9 @@
 		5000,
 		5007
 	],
-	"postCreateCommand": ".devcontainer/localinit.sh",
+	"postCreateCommand": "chmod +x .devcontainer/localinit.sh && .devcontainer/localinit.sh",
 	"remoteUser": "vscode",
 	"hostRequirements": {
 		"memory": "8gb"
 	}
-  }
-  
+}
